--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "DEBUG='bat-ratios' node ./index.js",
+    "test": "ava -v ./test/index.test.js",
+    "start": "DEBUG='bat-ratios' node ./bin/server.js",
     "dev": "nodemon --exec npm start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@brave-intl/currency": "^1.0.5",
+    "@brave-intl/currency": "^1.0.8",
     "boom": "^7.2.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "express-bearer-token": "^2.2.0",
+    "express-boom": "^2.0.0",
     "express-joi-validation": "^0.2.1",
     "joi": "^13.6.0",
     "lodash": "^4.17.10"
   },
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "ava": "^0.25.0",
+    "nodemon": "^1.18.3",
+    "supertest": "^3.1.0"
   }
 }
