--- a/package.json
+++ b/package.json
@@ -1,29 +1,46 @@
 {
-  "name": "test-currency",
+  "name": "bat-ratios",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "ava -v ./test/index.test.js",
-    "start": "DEBUG='bat-ratios' node ./bin/server.js",
+    "precommit": "npm test",
+    "lint": "standard",
+    "lint-fix": "npm run lint -- --fix",
+    "test": "npm run lint && ava -v ./test/index.test.js",
+    "start": "node ./bin/server.js",
     "dev": "nodemon --exec npm start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@brave-intl/currency": "^1.0.8",
-    "boom": "^7.2.0",
-    "cross-env": "^5.2.0",
-    "express": "^4.16.3",
+    "@brave-intl/currency": "^1.1.3",
+    "@sentry/node": "^4.2.3",
+    "debug": "^4.1.0",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
     "express-bearer-token": "^2.2.0",
     "express-boom": "^2.0.0",
     "express-joi-validation": "^0.2.1",
-    "joi": "^13.6.0",
-    "lodash": "^4.17.10"
+    "joi": "^13.7.0",
+    "joi-to-json-schema": "^3.4.0",
+    "lodash": "^4.17.11",
+    "node-cache": "^4.2.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "ava": "^0.25.0",
-    "nodemon": "^1.18.3",
-    "supertest": "^3.1.0"
+    "babel-eslint": "^9.0.0",
+    "husky": "^0.14.3",
+    "nodemon": "^1.18.4",
+    "standard": "*",
+    "supertest": "^3.3.0",
+    "swagger-ui-express": "^4.0.1"
+  },
+  "standard": {
+    "ignore": [
+      "config.js"
+    ],
+    "parser": "babel-eslint"
   }
 }
