--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@brave-intl/currency": "^1.0.9",
+    "@sentry/node": "^4.1.1",
     "express": "^4.16.3",
     "express-bearer-token": "^2.2.0",
     "express-boom": "^2.0.0",
@@ -23,7 +24,6 @@
     "joi": "^13.6.0",
     "joi-to-json-schema": "^3.4.0",
     "lodash": "^4.17.11",
-    "raven": "^2.6.4",
     "swagger-jsdoc": "^3.0.3",
     "uuid": "^3.3.2"
   },
