verticalized whitespace in tests, added values for capture exception

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-NODE_ENV=production
-DEBUG=bat-ratios
-CURRENCY_OXR_API_ID=12345678901234567890123456789
+NODE_ENV=development
+DEBUG=*
+DEBUG_COLORS=true
+CURRENCY_OXR_API_ID={CHANGE_ME}
