--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ NODE_ENV=development
 DEBUG=*
 DEBUG_COLORS=true
 CURRENCY_OXR_API_ID={CHANGE_ME}
+HEROKU_SLUG_COMMIT=test
+SENTRY_DSN={CHANGE_ME}
+DATABASE_URL=postgres://ratios:password@localhost:4010/ratios
+EARLIEST_BACKFILL=2018-12-31
+LATEST_BACKFILL=2019-01-04
