--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "precommit": "npm test",
     "lint": "standard",
     "lint-fix": "npm run lint -- --fix",
-    "test": "npm run lint && ava -v ./test/index.test.js",
+    "test": "npm run lint && npm run test-versions",
+    "test-versions": "npm run test-v1",
+    "test-v1": "ava -v ./test/v1/index.test.js",
     "start": "npm run serve",
     "serve": "node ./index.js",
     "dev": "nodemon --exec npm start",
@@ -31,8 +33,10 @@
     "express-bearer-token": "^2.2.0",
     "express-boom": "^2.0.0",
     "express-joi-validation": "^0.3.0",
+    "express-request-csv": "^1.0.0",
     "joi": "^13.7.0",
     "joi-to-json-schema": "^3.5.0",
+    "json2csv": "^4.3.3",
     "lodash": "^4.17.11",
     "pg": "^7.8.0",
     "uuid": "^3.3.2"
