--- a/package.json
+++ b/package.json
@@ -26,26 +26,28 @@
   "license": "ISC",
   "dependencies": {
     "@brave-intl/currency": "^1.4.4",
-    "@sentry/node": "^4.6.5",
+    "@sentry/node": "^4.6.6",
     "debug": "^4.1.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "express-bearer-token": "^2.2.0",
+    "express-bearer-token": "^2.4.0",
     "express-boom": "^2.0.0",
     "express-joi-validation": "^0.3.0",
+    "express-prom-bundle": "^5.1.4",
     "express-request-csv": "^1.0.0",
     "joi": "^13.7.0",
     "joi-to-json-schema": "^3.5.0",
-    "json2csv": "^4.3.3",
+    "json2csv": "^4.5.0",
     "lodash": "^4.17.11",
-    "pg": "^7.9.0",
+    "pg": "^7.10.0",
+    "prom-client": "^11.3.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "ava": "^1.3.1",
+    "ava": "^1.4.1",
     "babel-eslint": "^9.0.0",
     "husky": "^0.14.3",
-    "nodemon": "^1.18.9",
+    "nodemon": "^1.18.11",
     "standard": "*",
     "supertest": "^3.4.1",
     "swagger-ui-express": "^4.0.2"
