--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "license": "ISC",
   "dependencies": {
     "@brave-intl/currency": "^1.4.8",
+    "@grpc/grpc-js": "^0.4.0",
+    "@grpc/proto-loader": "^0.5.1",
     "@sentry/node": "^4.6.6",
     "debug": "^4.1.1",
     "dotenv": "^6.2.0",
@@ -35,6 +37,7 @@
     "express-joi-validation": "^0.3.0",
     "express-prom-bundle": "^5.1.5",
     "express-request-csv": "^1.0.1",
+    "grpc": "^1.23.3",
     "joi": "^13.7.0",
     "joi-to-json-schema": "^3.5.0",
     "json2csv": "^4.5.2",
