--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint-fix": "npm run lint -- --fix",
     "test": "npm run lint && npm run test-versions",
     "test-versions": "npm run test-v1",
-    "test-v1": "ava -v ./test/v1/index.test.js",
+    "test-v1": "ava --timeout=1000s -v ./test/v1/index.test.js",
     "start": "npm run serve",
     "serve": "node ./index.js",
     "docker-build": "docker-compose build",
@@ -25,8 +25,8 @@
   "license": "ISC",
   "dependencies": {
     "@brave-intl/currency": "^1.5.1",
-    "@sentry/node": "^5.14.2",
-    "ava": "^2.4.0",
+    "@sentry/node": "^5.17.0",
+    "ava": "^3.8.2",
     "debug": "^4.1.1",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
@@ -45,9 +45,9 @@
   },
   "devDependencies": {
     "husky": "^0.14.3",
-    "standard": "^14.3.3",
+    "standard": "^14.3.4",
     "supertest": "^3.4.1",
-    "swagger-ui-express": "^4.1.3"
+    "swagger-ui-express": "^4.1.4"
   },
   "standard": {
     "ignore": [
