--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   - npm ci
 sudo: required
 before_script:
-  - npm audit
+  - npm audit --audit-level=moderate; echo $?
   - npm run lint
   - npm run docker-build
   - docker-compose up -d ratios-postgres
