--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint-fix": "npm run lint -- --fix",
     "test": "npm run lint && npm run test-versions",
     "test-versions": "npm run test-v1",
-    "test-v1": "ava --timeout=1000s -v ./test/v1/index.test.js",
+    "test-v1": "ava --timeout=1000s -v ./test/v1/index.test.js -m 'can retrieve previous days'",
     "start": "npm run serve",
     "serve": "node ./index.js",
     "docker-build": "docker-compose build",
     "docker-test": "docker-compose run --rm -v $(pwd)/test:/usr/src/app/test ratios-web npm test",
     "docker-up": "docker-compose -f docker-compose.yml up ratios-web",
+    "docker-up-db": "docker-compose -f docker-compose.yml up -d ratios-postgres",
     "docker-migrate-up": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-web ./bin/up.sh",
     "docker-migrate-down": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-web ./bin/down.sh"
   },
