--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,7 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Stand up Postgres
-        run: npm run docker-up-db
+        run: npm run docker-up-dbs
 
       - name: Migrate DBs
         run: npm run docker-migrate-dbs
@@ -94,7 +94,7 @@ jobs:
       - name: Test
         run: npm run docker-test
       - name: Check Migrating Down
-        run: npm run docker-migrate-down-all
+        run: npm run docker-migrate-dbs-down
 
 #       - name: Coverage
 #         run: npm run coverage
