split up cron job

--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "test-v1": "ava --timeout=1000s -v ./test/v1/index.test.js",
     "start": "npm run serve",
     "serve": "node ./index.js",
+    "cron": "node ./cron.js",
     "security": "npm audit && npm run lint",
     "docker-build": "docker-compose build",
     "docker-test": "docker-compose run --rm -v $(pwd)/test:/usr/src/app/test ratios-web npm test",
-    "docker-up": "docker-compose -f docker-compose.yml up ratios-web",
+    "docker-up": "docker-compose -f docker-compose.yml up ratios-web ratios-cron",
     "docker-up-detached": "docker-compose -f docker-compose.yml up -d ratios-web",
     "docker-up-dbs": "docker-compose -f docker-compose.yml up -d ratios-postgres",
     "docker-migrate-dbs": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-web ./bin/up.sh",
