--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,3 +33,16 @@ services:
       - "PORT=8080"
     volumes:
       - ./:/usr/src/app
+
+  ratios-cron:
+    container_name: ratios-cron
+    command: "npm run cron"
+    networks:
+      - ratios
+    extends:
+      file: base.yml
+      service: ratios
+    depends_on:
+      - ratios-postgres
+    volumes:
+      - ./:/usr/src/app
