--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,6 +92,7 @@ jobs:
         run: |
           sleep 5
           docker ps
+          docker-compose logs
 
       - name: Test
         run: npm run docker-test
