--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "test-v1": "ava --timeout=1000s -v ./test/v1/index.test.js",
     "start": "npm run serve",
     "serve": "node ./index.js",
-    "cron": "node ./cron.js",
+    "history": "node ./history.js",
     "security": "npm audit && npm run lint",
     "docker-build": "docker-compose build",
     "docker-test": "docker-compose run --rm -v $(pwd)/test:/usr/src/app/test ratios-web npm test",
-    "docker-up": "docker-compose -f docker-compose.yml up ratios-web ratios-cron",
-    "docker-up-detached": "docker-compose -f docker-compose.yml up -d ratios-web ratios-cron",
+    "docker-up": "docker-compose -f docker-compose.yml up ratios-web",
+    "docker-up-detached": "docker-compose -f docker-compose.yml up -d ratios-web",
     "docker-up-dbs": "docker-compose -f docker-compose.yml up -d ratios-postgres",
-    "docker-migrate-dbs": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-web npm run migrate-up",
+    "docker-fill-dbs": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-history",
+    "docker-migrate-dbs": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-migrate",
     "docker-migrate-dbs-down": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-web npm run migrate-down",
     "migrate-up": "./bin/up.sh",
     "migrate-down": "./bin/down.sh"
