added step to fill dbs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,8 @@ jobs:
         run: npm run docker-migrate-dbs
       - name: Bring Up App Containers
         run: npm run docker-up-detached
+      - name: Fill DBs
+        run: npm run docker-fill-dbs
       - name: Print Checks
         run: |
           sleep 5
