--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "precommit": "npm test",
+    "precommit": "yarn test",
     "lint": "standard",
-    "lint-fix": "npm run lint -- --fix",
-    "test": "npm run lint && npm run test-versions",
-    "test-versions": "npm run test-v1",
+    "lint-fix": "yarn run lint -- --fix",
+    "test": "yarn run lint && yarn run test-versions",
+    "test-versions": "yarn run test-v1",
     "test-v1": "ava --timeout=1000s -v ./test/v1/index.test.js",
-    "start": "npm run serve",
+    "start": "yarn run serve",
     "serve": "node ./index.js",
     "history": "node ./history.js",
-    "security": "npm audit && npm run lint",
+    "security": "yarn audit && yarn run lint",
     "docker-build": "docker-compose build",
-    "docker-test": "docker-compose run --rm -v $(pwd)/test:/usr/src/app/test ratios-web npm test",
+    "docker-test": "docker-compose run --rm -v $(pwd)/test:/usr/src/app/test ratios-web yarn test",
     "docker-up": "docker-compose -f docker-compose.yml up ratios-web",
     "docker-up-detached": "docker-compose -f docker-compose.yml up -d ratios-web",
     "docker-up-dbs": "docker-compose -f docker-compose.yml up -d ratios-postgres",
     "docker-fill-dbs": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-history",
     "docker-migrate-dbs": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-migrate",
-    "docker-migrate-dbs-down": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-web npm run migrate-down",
+    "docker-migrate-dbs-down": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-web yarn run migrate-down",
     "migrate-up": "./bin/up.sh",
     "migrate-down": "./bin/down.sh"
   },
@@ -32,13 +32,12 @@
   "repository": "git@github.com:brave-intl/bat-ratios.git",
   "license": "ISC",
   "dependencies": {
-    "@brave-intl/currency": "^1.6.0",
+    "@brave-intl/currency": "^1.6.2",
     "@sentry/node": "^5.28.0",
     "ava": "^3.13.0",
     "debug": "^4.3.1",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
-    "express-bearer-token": "^2.4.0",
     "express-boom": "^2.0.0",
     "express-joi-validation": "^0.3.0",
     "express-prom-bundle": "^5.1.5",
@@ -47,7 +46,7 @@
     "joi-to-json-schema": "^3.5.0",
     "json2csv": "^4.5.4",
     "lodash": "^4.17.20",
-    "pg": "^7.18.2",
+    "pg": "^8.5.1",
     "prom-client": "^11.5.3",
     "uuid": "^3.4.0"
   },
