--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
           restore-keys: |
             docker-cache-
 
-      - run: yarn ci
+      - run: yarn
       # Runs a single command using the runners shell
       - name: Run security checks (audit + lint)
         run: yarn run security
