--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@brave-intl/currency": "^1.6.3",
     "@sentry/node": "^5.29.0",
     "ava": "^3.14.0",
+    "basetag": "^1.2.10",
     "debug": "^4.3.1",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
