--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "docker-migrate-dbs": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-migrate",
     "docker-migrate-dbs-down": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-web yarn run migrate-down",
     "migrate-up": "./bin/up.sh",
-    "migrate-down": "./bin/down.sh"
+    "migrate-down": "./bin/down.sh",
+    "postinstall": "rm node_modules/$; ln -s .. $ && mv $ ./node_modules"
   },
   "author": {
     "name": "Michael McLaughlin",
@@ -35,7 +36,6 @@
     "@brave-intl/currency": "^1.6.3",
     "@sentry/node": "^5.29.0",
     "ava": "^3.14.0",
-    "basetag": "^1.2.10",
     "debug": "^4.3.1",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
