--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
 
   ratios-web:
     container_name: ratios-web
-    command: "npm start"
+    command: "yarn start"
     ports:
       - "4000:8080"
     networks:
