--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "docker-migrate-dbs-down": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-web yarn run migrate-down",
     "migrate-up": "./bin/up.sh",
     "migrate-down": "./bin/down.sh",
-    "postinstall": "rm node_modules/$; ln -s .. $ && mv $ ./node_modules"
+    "postinstall": "rm -f node_modules/$ && ln -s .. $ && mv $ ./node_modules"
   },
   "author": {
     "name": "Michael McLaughlin",
@@ -34,7 +34,7 @@
   "license": "ISC",
   "dependencies": {
     "@brave-intl/currency": "^1.6.3",
-    "@sentry/node": "^5.29.0",
+    "@sentry/node": "^6.2.0",
     "ava": "^3.14.0",
     "debug": "^4.3.1",
     "dotenv": "^6.2.0",
