--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ SENTRY_DSN={CHANGE_ME}
 DATABASE_URL=postgres://ratios:password@localhost:4010/ratios
 EARLIEST_BACKFILL=2018-12-31
 LATEST_BACKFILL=2019-01-04
+PORT=8082
+PRIVATE_PORT=8083
