--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lodash": "^4.17.20",
     "pg": "^8.5.1",
     "prom-client": "^11.5.3",
+    "redis": "^3.1.2",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
