--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "docker-test": "docker-compose run --rm -v $(pwd)/test:/usr/src/app/test ratios-web yarn test",
     "docker-up": "docker-compose -f docker-compose.yml up ratios-web",
     "docker-up-detached": "docker-compose -f docker-compose.yml up -d ratios-web",
-    "docker-up-dbs": "docker-compose -f docker-compose.yml up -d ratios-postgres",
+    "docker-up-dbs": "docker-compose -f docker-compose.yml up -d ratios-postgres ratios-redis",
     "docker-fill-dbs": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-history",
     "docker-migrate-dbs": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-migrate",
     "docker-migrate-dbs-down": "docker-compose -f docker-compose.yml run --rm -w /usr/src/app ratios-web yarn run migrate-down",
@@ -49,6 +49,7 @@
     "lodash": "^4.17.20",
     "pg": "^8.5.1",
     "prom-client": "^11.5.3",
+    "redis": "^3.1.2",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
