--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@brave-intl/currency": "^1.6.4",
     "@sentry/node": "^6.2.5",
-    "ava": "^3.14.0",
+    "ava": "^4.0.0-rc.1",
     "debug": "^4.3.1",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
@@ -54,7 +54,7 @@
   },
   "devDependencies": {
     "husky": "^0.14.3",
-    "standard": "^14.3.4",
+    "standard": "^16.0.4",
     "supertest": "^3.4.1",
     "swagger-ui-express": "^4.1.5"
   },
