Added in CG api key to ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,10 @@ on:
 
 env:
   NODE_ENV: ci
-  DEBUG: "*,-express*,-babel*,-eslint*,-nodemon*,supertest,bat-ratios"
-  DEBUG_COLORS: 'true'
+  # DEBUG: "*,-express*,-babel*,-eslint*,-nodemon*,supertest,bat-ratios"
+  # DEBUG_COLORS: 'true'
   CURRENCY_OXR_API_ID: ${{ secrets.CURRENCY_OXR_API_ID }}
+  COINGECKO_APIKEY: ${{ secrets.COINGECKO_APIKEY }}
   DATABASE_URL: postgres://ratios:password@localhost:5010/ratios
   EARLIEST_BACKFILL: '2018-12-31'
   LATEST_BACKFILL: '2019-01-04'
